--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "body-parser": "^1.20.2",
     "@supabase/supabase-js": "^2.38.0",
     "pg": "^8.11.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "@google/generative-ai": "latest"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
